--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 @keyframes fadeIn {
 	from {
 		opacity: 0;
@@ -7,6 +8,11 @@
 		opacity: 1;
 		transform: translate3d(0, 0, 0);
 	}
+}
+#wrapper {
+  margin-left:auto;
+  margin-right:auto;
+  width:960px;
 }
 
 header {
@@ -21,7 +27,7 @@ header {
     background:#fff;
     z-index: 1000;
     min-height: 50px;
-    max-height: 50x;
+    max-height: 50px;
     width: 100%;
     border-bottom: 2px solid #e2eaf3;
     font-family: 'Lato', sans-serif
@@ -50,6 +56,7 @@ body {
     margin-right: 300px;
     font-family: 'Lato', sans-serif
 }
+
 section {
     height: 80vh;
     display: flex;
@@ -73,16 +80,16 @@ section {
     border-radius: 50%;
 }
 #hero .card {
-  height:320px;
+  height:340px;
   width: 320px;
-    border-radius: 5%;
+    border-radius: 3%;
     background: url("https://i.imgur.com/usBDue4.png") no-repeat;
 }
 #hero .card:hover{
   content: url("https://i.imgur.com/zZTz0TV.png");
-  height:320px;
+  height:340px;
   width: 320px;
-  border-radius: 5%;
+  border-radius: 3%;
 }
 
 footer {
@@ -130,11 +137,6 @@ header a {
 
 
   html { 
-    background: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('https://images.unsplash.com/photo-1501971687420-ee6a2eca6e03?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
     scroll-behavior: smooth;
   }
 
@@ -178,7 +180,8 @@ header a {
   
 .project-card {
     background-color: #fff;
-    border-radius: 5px;
+    box-shadow: 0 3px 10px rgb(33 33 33 / 0.2);
+    border-radius: 8px;
     transition: box-shadow .3s;
     padding: 20px;
     margin: 10px;
